// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input matches withColouredError snapshot: with coloured error mount 1`] = `
.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 4px solid #f47738;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
    width: 50%;
  }
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

<StyledHoc
  error="example"
  errorColor="#f47738"
  type="text"
>
  <Input
    className="emotion-3 emotion-0"
    error="example"
    errorColor="#f47738"
    type="text"
  >
    <StyledInput
      className="emotion-3 emotion-0"
      error="example"
      errorColor="#f47738"
      type="text"
    >
      <input
        className="emotion-0 emotion-1 emotion-2"
        type="text"
      />
    </StyledInput>
  </Input>
</StyledHoc>
`;

exports[`Input matches withError snapshot: with error mount 1`] = `
.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 4px solid #b10e1e;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
    width: 50%;
  }
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

<StyledHoc
  error="example"
  type="text"
>
  <Input
    className="emotion-3 emotion-0"
    error="example"
    type="text"
  >
    <StyledInput
      className="emotion-3 emotion-0"
      error="example"
      type="text"
    >
      <input
        className="emotion-0 emotion-1 emotion-2"
        type="text"
      />
    </StyledInput>
  </Input>
</StyledHoc>
`;

exports[`Input matches wrapper snapshot: wrapper mount 1`] = `
.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
    width: 50%;
  }
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

<StyledHoc
  type="text"
>
  <Input
    className="emotion-3 emotion-0"
    type="text"
  >
    <StyledInput
      className="emotion-3 emotion-0"
      type="text"
    >
      <input
        className="emotion-0 emotion-1 emotion-2"
        type="text"
      />
    </StyledInput>
  </Input>
</StyledHoc>
`;
